--- a/src/worker/Worker.csproj
+++ b/src/worker/Worker.csproj
@@ -6,9 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.2" />
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
-    <PackageReference Include="System.Text.Json" Version="6.0.0" />
+    <ProjectReference Include="..\sdk\TaskManagement.SDK\TaskManagement.SDK.csproj" />
   </ItemGroup>
 
 </Project>
