--- a/src/TaskManagement.SDK/TaskManagement.SDK.csproj
+++ b/src/TaskManagement.SDK/TaskManagement.SDK.csproj
@@ -8,5 +8,6 @@
     <PackageReference Include="System.Text.Json" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.2" />
+    <PackageReference Include="NetMQ" Version="4.0.1.6" />
   </ItemGroup>
 </Project>
